Fix book list alignment

--- a/assets/scss/components/_book-list.scss
+++ b/assets/scss/components/_book-list.scss
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
 
+  ul {
+    flex-grow: 1;
+  }
+
   .sticky-header {
     inset-block-start: 0;
     margin-block-end: 0.75em;
